--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --noStackTrace --runInBand artist",
+    "test": "jest --testMatch \"<rootDir>/*.spec.ts\" --noStackTrace --runInBand",
     "test:auth": "cross-env TEST_MODE=auth jest --testPathIgnorePatterns refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:refresh": "cross-env TEST_MODE=auth jest --testPathPattern refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:watch": "jest --watch",
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/typeorm": "^10.0.2",
     "@types/yamljs": "^0.2.34",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -43,6 +44,7 @@
     "sequelize": "^6.37.1",
     "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.0",
+    "typeorm": "^0.3.20",
     "uuid": "^8.3.2",
     "yamljs": "^0.3.0"
   },
