--- a/.env
+++ b/.env
@@ -10,4 +10,6 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=root
-POSTGRES_DATABASE=postgres
+POSTGRES_DB=postgres
+
+NODE_ENV=development
